docs/style.css
@import url('https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');

* {
  padding: 0;
  margin: 0;
}

:root {
  --black: #000;
  --gray: #6a6a6a;
  --white: #fff;
}

html,
body {
  width: 100%;
  height: 100%;
  font-family: 'Work Sans', sans-serif;
}

h1,
h2,
h3,
h4 {
  width: fit-content;
}

h1 {
  font-weight: normal;
  font-size: 164px;
}

h2 {
  font-weight: normal;
}

a {
  text-decoration: none;
  color: var(--black);
  opacity: 0.5;
}

a:hover {
  opacity: 1;
  text-decoration: underline;
}

.bold {
  font-weight: 900;
}

.italic {
  font-style: italic;
}

.flex {
  display: flex;
}

.center {
  align-items: center;
  justify-content: center;
}

.center-vert {
  align-items: center;
}

.center-horz {
  justify-content: center;
}

.col {
  flex-direction: column;
}

.docs-wrapper {
  width: 80%;
  height: 80%;
  overflow-y: scroll;
  /* DOCS STYLING */

  & h1 {
    font-size: 64px;
    margin-bottom: 16px;
  }

  & h2 {
    margin: 16px 0 4px 0;
  }

  & pre {
    background-color: var(--black);
    color: var(--white);
    padding: 16px;
    border-radius: 8px;
    margin: 4px 0;
  }

  & code {
    font-family: 'Fira Mono', sans-serif;
    font-size: 14px;
  }

  & th {
    text-align: left;
    font-weight: normal;
  }
}

